--- a/musicians.html
+++ b/musicians.html
@@ -28,7 +28,7 @@
         <ul id="list">
             <li><a href="https://radiohead.bandcamp.com/" class="bandcampbold">
                 Radiohead</a>: They've been making music since the 90s, mostly rock at first but their stuff is super varied with each album.
-                I recommend <a href="https://radiohead.bandcamp.com/album/ok-computer" class="bandcamp">OK Computer</a> and <a href="https://radiohead.bandcamp.com/album/kid-a" class="bandcamp">Kid A</a>, as well as the <a href="https://www.radiohead.com/library" class="small">Radiohead Public Library</a> for everything they've made since their start. Almost.<br></li>
+                I recommend <a href="https://radiohead.bandcamp.com/album/in-rainbows" class="bandcamp">In Rainbows</a> and <a href="https://radiohead.bandcamp.com/album/kid-a" class="bandcamp">Kid A</a>, as well as the <a href="https://www.radiohead.com/library" class="small">Radiohead Public Library</a> for everything they've made since their start. Almost.<br></li>
             <li><a href="https://gingerroot.bandcamp.com/" class="bandcampbold">
                 Ginger Root/Cameron Lew</a>: Again, his music has changed from his early years, from "agressive elevator soul" to city pop. Some great albums are <a href="https://gingerroot.bandcamp.com/album/rikki" class="bandcamp">Rikki</a> and <a href="https://gingerroot.bandcamp.com/album/city-slicker" class="bandcamp">City Slicker</a>.<br></li>
             <li><a href="https://open.spotify.com/artist/45yEuthJ9yq1rNXAOpBnqM" class="spotifybold">
