--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -10,12 +10,11 @@
             grid-template-columns: auto auto auto auto auto auto;
             gap: auto}
         #notes div{margin-bottom: 10px;
-            border: solid #15c405 5px;
-            background-color: #156b05; 
+            border: solid #15c405 3px;
+            background-color: #072502; 
             max-width: 150px;
             height: 150px;
-            padding: 10px;
-            box-shadow: #072502 5px 5px}
+            padding: 10px}
     </style></head>
     <body>
 
