--- a/misc/journal.html
+++ b/misc/journal.html
@@ -6,14 +6,13 @@
         <title>> journal</title>
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        .entry{background-color: #156b05;
-        border: solid #15c405 5px;
+        .entry{background-color: #072502;
+        border-left: solid #15c405 5px;
         padding: 10px;
         padding-left: 20px;
         margin: 40px auto;
-        width: 750px;
-        box-shadow: #072502 5px 5px}
-        h2{margin-top:16px}
+        width: 750px}
+        h2{margin:16px 0}
         a{text-decoration-color: #072502;}
         .h{text-decoration-color: #808080}
         .h:hover{text-decoration-color: #15c405}
