--- a/sitelog.html
+++ b/sitelog.html
@@ -33,7 +33,7 @@
         </div></nav>
         <div class="main">
         <h1>sitelog</h1>
-    <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>and that's it enjoy the sitelog ig</p>
+    <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>in existence since july 2022<br>and that's it enjoy the sitelog ig</p>
         <div id="entry" style="margin-bottom: 25px; margin-top: 25px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
         <h2>17/11/2022 21:31</h2>
