--- a/words/blips.html
+++ b/words/blips.html
@@ -6,9 +6,19 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
         body{background-color: #080808;
-        color: #f0f0f0;
-        font-family: 'Fira Sans', sans-serif;}
+        color: #808080;
+        font-family: 'Fira Sans', sans-serif;
+        margin: 0px;
+        position: absolute;
+        width: 100vw;
+        top: 50%;
+        transform:translateY(-50%)}
+        h1{transform: rotate(-90deg) translateY(50%);
+            float: right;
+            font-size: 40vh;
+            margin: 20px}
+        h.hover{color: #f0f0f0}
         </style> 
     <body>
-        <h1>blips</h1>
+        <h1><span class="h"></span>b<span class="h">l</span><span class="h">i</span><span class="h">p</span><span class="h">s</span></h1>
     </body>
