--- a/words/blips.html
+++ b/words/blips.html
@@ -17,7 +17,7 @@
             float: right;
             font-size: 40vh;
             margin: 20px}
-        h.hover{color: #f0f0f0}
+        h:hover{color: #f0f0f0}
         </style> 
     <body>
         <h1><span class="h"></span>b<span class="h">l</span><span class="h">i</span><span class="h">p</span><span class="h">s</span></h1>
