--- a/words/blips.html
+++ b/words/blips.html
@@ -20,5 +20,5 @@
         h:hover{color: #f0f0f0}
         </style> 
     <body>
-        <h1><span class="h"></span>b<span class="h">l</span><span class="h">i</span><span class="h">p</span><span class="h">s</span></h1>
+        <h1><span class="h">b</span><span class="h">l</span><span class="h">i</span><span class="h">p</span><span class="h">s</span></h1>
     </body>
