--- a/words/blips.html
+++ b/words/blips.html
@@ -13,12 +13,13 @@
         width: 100vw;
         top: 50%;
         transform:translateY(-50%)}
+        a{color: #808080; text-decoration: none;}
         h1{transform: rotate(-90deg) translateY(50%);
             float: right;
             font-size: 40vh;
             margin: 20px}
-        h:hover{color: #f0f0f0}
+        a:hover{color: #f0f0f0}
         </style> 
     <body>
-        <h1><span class="h">b</span><span class="h">l</span><span class="h">i</span><span class="h">p</span><span class="h">s</span></h1>
+        <h1><a href="/website/words">b</a><a href="/website/words">l</a><a href="/website/words">i</a><a href="/website/words">p</a><a href="/website/words">s</a></h1>
     </body>
