--- a/words.html
+++ b/words.html
@@ -54,5 +54,5 @@
             <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
             <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
         </ul></details>
-        <a href="/words/blips.html" style="font-size: x-large">blips</a>
+        <a href="words/blips.html" style="font-size: x-large">blips</a>
     </div></body>
