--- a/sitelog.html
+++ b/sitelog.html
@@ -36,9 +36,12 @@
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>in existence since july 2022<br>and that's it enjoy the sitelog ig</p>
         <div id="entry" style="margin-bottom: 25px; margin-top: 25px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>14/12/2022 20:14</h2>
+        <p>I've added a new section called <a href="words/blips.html">blips</a>, for some shorter things I've written!</p> 
+    </div><div id="entry">
         <h2>17/11/2022 21:31</h2>
         <p>Changed the doodles to get bigger when you hover over them!</p> 
-        <div id="entry">
+    </div><div id="entry">
         <h2>9/11/2022 22:13</h2>
         <p>Added a section to the about me page with some quick info... about me</p>   
     </div><div id="entry">
