--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -23,6 +23,7 @@
     <br>> <a href="/website/misc">go back</a>
     </p>
     <div id="notes">
+        <div>What do i know</div>
         <div>I wonder if anyone's ever come down here</div>
         <div>Why do songs keep getting stuck in my head...</div>
         <div>Hate only brings you hate.</div>
