--- a/doodles/people.html
+++ b/doodles/people.html
@@ -35,6 +35,8 @@
         <div class="main">
         <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
         <div id="drawings">
+        <img src="/website/doodles/people/lonely.jpg" alt="lonely">
+        <img src="/website/doodles/people/howdy.jpg" alt="howdy">
         <img src="/website/doodles/people/lookup.jpg" alt="lookup">
         <img src="/website/doodles/people/out.jpg" alt="out">
         <img src="/website/doodles/people/yay.jpg" alt="yay">
