--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -39,6 +39,7 @@
         <img src="/website/doodles/etc/noise.jpg" alt="noise">
         <img src="/website/doodles/etc/light.jpg" alt="light">
         <img src="/website/doodles/etc/creatures.jpg" alt="creatures">
+        <img src="/website/doodles/etc/lines.jpg" alt="lines">
         <img src="/website/doodles/etc/cat_doodles.jpg" alt="cat doodles">
         <img src="/website/doodles/etc/cat_spotlight.jpg" alt="cat spotlight">
         <img src="/website/doodles/etc/et.jpg" alt="et">
