--- a/misc/folder.html
+++ b/misc/folder.html
@@ -72,6 +72,7 @@
         <ul>
             <li><a href="folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
             <li><a href="folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
+            <li><a href="folder/redlonely.png">redlonely</a>: a version of a doodle that i wanted to use for status.cafe, but i don't think it looks very good.</li>
         </ul>
     </details>
 
