--- a/misc/folder/normal.html
+++ b/misc/folder/normal.html
@@ -3,12 +3,13 @@
     <head><title>normal</title><style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@600&display=swap');
     body{
-        background-color: #6701c7;
-        color: #f0f0f0;
-        font-family: 'Archivo', sans-serif}
+        background-color: #f0f0f0;
+        color: #202020;
+        font-family: 'Archivo', sans-serif;
+        font-size: 30vh; line-height: 0.8}
     a{color: #f0f0f0}
     </style></head>
     <body>
-        <p>BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
 
 </body>
