--- a/misc/folder/normal.html
+++ b/misc/folder/normal.html
@@ -11,5 +11,8 @@
     </style></head>
     <body>
         <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
 
 </body>
