--- a/misc/folder/normal.html
+++ b/misc/folder/normal.html
@@ -6,13 +6,13 @@
         background-color: #f0f0f0;
         color: #202020;
         font-family: 'Archivo', sans-serif;
-        font-size: 30vh; line-height: 0.8}
+        font-size: 22vw; line-height: 0.8}
     a{color: #f0f0f0}
     </style></head>
     <body>
-        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
-        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
-        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
-        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE THE REST OF US</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE ALL OF US</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE ALL OF US</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE ALL OF US</p>
+        <p style="margin:0px">BECOME NORMAL<br>BECOME NORMAL<br>BECOME NORMAL<br>LIKE ALL OF US</p>
 
 </body>
