--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <h1>cvni81's website</h1>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
     I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
-    Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br></p>
+    Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
+    around and explore, however small this site may be.<br></p>
     <p style="font-size:xx-large">
         <a href="/website/about" title="me and what i like to do">about</a> . 
         <a href="/website/musicians" title="good music people">musicians</a> . 
