--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
     Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
     around and explore, however small this site may be.<br>
-    <details><summary>current status</summary>
-        <div id="entry"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
+    <details><summary style="font-weight: bold">current status</summary>
+        <div id="entry" style="margin-left: 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
     <p style="font-size:xx-large">
         <a href="/website/about" title="me and what i like to do">about</a> . 
         <a href="/website/musicians" title="good music people">musicians</a> . 
