--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             p{max-width: 764px;}
             body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
             h1{font-size: 70px}
+            #entry a{text-decoration-thickness: 1px;}
         </style></head>
 
     <body>
