--- a/sitelog.html
+++ b/sitelog.html
@@ -6,14 +6,9 @@
         <meta charset="UTF-8">
         <title>sitelog</title>
         <link href="/website/styles/logstyle.css" rel="stylesheet" type="text/css" media="all"><style>
-            #statuscafe{margin-top: 20px; margin-bottom: 30px; border-left: solid #ffa900 2px; padding-left: 8px}
-            #statuscafe-username{margin-bottom: 8px}
-            #statuscafe-content{max-width: 726px; padding-left: 16px}
             #entry{margin-bottom: 40px}
             h2{font-size: large}
             h2::before{content:"> "; color: #a87000}
-            #entry h2{margin-bottom: 7px}
-            #entry p{margin-top: 7px}
         </style></head>
 
         <body><nav><div style="margin: 20px">
@@ -34,8 +29,10 @@
         <div class="main">
         <h1>sitelog</h1>
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>in existence since july 2022<br>and that's it enjoy the sitelog ig</p>
-        <div id="entry" style="margin-bottom: 25px; margin-top: 25px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+    <h2>30/12/2022 12:32</h2>
+        <p>I moved the status.cafe thing to the index, where it always should have been.</p> 
+    </div><div id="entry">
         <h2>14/12/2022 20:14</h2>
         <p>I've added a new section called <a href="words/blips.html">blips</a>, for some shorter things I've written!</p> 
     </div><div id="entry">
