--- a/words.html
+++ b/words.html
@@ -37,6 +37,10 @@
                 taso, mi pali e nimi mute ante lon toki ante kin.<br>
                 mi o pali e nimi mute sin a</p>
             </details>
+
+        <a href="words/diary.html" style="font-size: x-large">diary</a>
+        <a href="words/blips.html" style="font-size: x-large">blips</a>
+
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
         <ul>
             <li><a href="/website/words/vento">vento <span class="small">(152 pal.)</span></a></li>
@@ -54,5 +58,4 @@
             <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
             <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
         </ul></details>
-        <a href="words/blips.html" style="font-size: x-large">blips</a>
     </div></body>
