--- a/words.html
+++ b/words.html
@@ -38,7 +38,7 @@
                 mi o pali e nimi mute sin a</p>
             </details>
 
-        <a href="words/diary.html" style="font-size: x-large">diary</a>
+        <a href="words/diary.html" style="font-size: x-large">diary</a><br>
         <a href="words/blips.html" style="font-size: x-large">blips</a>
 
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
