--- a/words/diary.html
+++ b/words/diary.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head><title>normal</title><style>
-    @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@600&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap');
     body{
         margin: 0px;
         background-color: #f0f0f0;
         width: 100vw;
         color: #202020;
         font-family: 'Archivo', sans-serif;
-        font-size: 10vh; line-height: 1}
+        font-size: 50vh; line-height: 1}
         a{color: #202020; text-decoration-thickness: 5px}
     </style></head>
     <body>
@@ -133,5 +134,5 @@
             <br>(kisses diary)
             <br>(goes to bed)
             <br>
-            <br>(Author looks at work with a strange face)</p>
+            <br><span style="font-family: 'Libre Baskerville', serif">(Author looks at work with a strange face)</span></p>
 </body>
