--- a/words/diary.html
+++ b/words/diary.html
@@ -5,15 +5,15 @@
     @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap');
     body{
         margin: 0px;
-        background-color: #f0f0f0;
+        background-color: #202020;
         width: 100vw;
-        color: #202020;
+        color: #d0d0d0;
         font-family: 'Archivo', sans-serif;
-        font-size: 50vh; line-height: 1}
-        a{color: #202020; text-decoration-thickness: 5px}
+        font-size: 4vh; line-height: 1.4}
+        a{color: #d0d0d0; text-decoration-thickness: 5px}
     </style></head>
     <body>
-        <p style="width: fit-content; margin-left: 100px">hi! um
+        <p style="width: fit-content; margin: 50px 300px 50px 100px">hi! um
             <br>so i'm just gonna start this... uhmm...
             <br>uh hello! heh
             <br>
@@ -134,5 +134,7 @@
             <br>(kisses diary)
             <br>(goes to bed)
             <br>
-            <br><span style="font-family: 'Libre Baskerville', serif">(Author looks at work with a strange face)</span></p>
+            <br><span style="font-family: 'Libre Baskerville', serif">(Author looks at work with a strange face)</span>
+            <br>
+            <br><a href="/website/words">back to words</a></p>
 </body>
