--- a/words/diary.html
+++ b/words/diary.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><title>normal</title><style>
+    <head><title>diary</title><style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap');
     body{
