--- a/sitelog.html
+++ b/sitelog.html
@@ -30,7 +30,10 @@
         <h1>sitelog</h1>
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>in existence since july 2022<br>and that's it enjoy the sitelog ig</p>
     <div id="entry">
-    <h2>30/12/2022 12:32</h2>
+        <h2>4/1/2023 11:43</h2>
+        <p>I finally made a <a href="/website/words/diary">new words thing</a>!</p> 
+    </div><div id="entry">
+        <h2>30/12/2022 12:32</h2>
         <p>I moved the status.cafe thing to the index, where it always should have been.</p> 
     </div><div id="entry">
         <h2>14/12/2022 20:14</h2>
