--- a/words.html
+++ b/words.html
@@ -8,6 +8,7 @@
         summary{font-size: x-large}
         ul{margin-top:0px}
         .small{font-weight: normal; text-decoration-thickness: 1px}
+        details{margin: 10px 0}
         </style> 
     </head>
         <body><nav><div style="margin: 20px">
@@ -38,7 +39,7 @@
                 mi o pali e nimi mute sin a</p>
             </details>
 
-        <a href="words/diary.html" style="font-size: x-large">diary</a><br>
+        <a href="words/diary.html" style="font-size: x-large; margin-top:0px">diary</a><br>
         <a href="words/blips.html" style="font-size: x-large">blips</a>
 
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
