--- a/buttons.html
+++ b/buttons.html
@@ -30,7 +30,7 @@
     <div class="main">
     <h1>buttons</h1>
     <p>This part of the site houses a bunch of buttons (as many as currently possible), from people we talk to on discord and other folks' cool things we've come accross and think you should look at! Many of them served as lots of inspiration for me to make my site!<br>
-    Oh and here's mine if you want to put it in your website for some reason<br><img src="/website/misc/folder/nowhere.gif" alt="nowhere in particular"></p>
+    Oh and here's mine if you want to put it in your website for some reason<br></p><img src="/website/misc/folder/nowhere.gif" alt="nowhere in particular">
     <code>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/misc/folder/nowhere.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</code>
     <h2>acquaintances</h2>
     <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> 
