--- a/buttons.html
+++ b/buttons.html
@@ -9,6 +9,7 @@
         body{background-color: #b8cadf;}
         a::after, a::before{color: #475464}
         h1{text-shadow: #7ba0cc 3px 3px}
+        h2{margin-bottom: 10px}
     </style>
     </head>
 
