--- a/buttons.html
+++ b/buttons.html
@@ -30,7 +30,7 @@
     </div></nav>
     <div class="main">
     <h1>buttons</h1>
-    <p>This part of the site houses a bunch of buttons (as many as currently possible), from people we talk to on discord and other folks' cool things we've come accross and think you should look at! Many of them served as lots of inspiration for me to make my site!<br>
+    <p>This is the place where we put any and all buttons of other sites! (as many as currently possible)<br>
     Oh and here's mine if you want to put it in your website for some reason<br></p><img src="/website/misc/folder/nowhere.gif" alt="nowhere in particular"><br>
     <div style="width: 500px"><code>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/misc/folder/nowhere.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</code></div>
     <h2>acquaintances</h2>
