--- a/buttons.html
+++ b/buttons.html
@@ -32,7 +32,8 @@
     <h1>buttons</h1>
     <p>This is the place where we put any and all buttons of other sites! (as many as currently possible)<br>
     Oh and here's mine if you want to put it in your website for some reason<br></p><img src="/website/misc/folder/nowhere.gif" alt="nowhere in particular"><br>
-    <div style="width: 500px"><code>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/misc/folder/nowhere.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</code></div>
+    <div style="width: 500px">
+    <details><summary>button code</summary><code>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/misc/folder/nowhere.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</code></div></details>
     <h2>acquaintances</h2>
     <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> 
     <a href="https://motan.gay/" class="button" alt="https://motan.gay/ - behold now!"><img src="https://motan.gay/images/button.png"></a> 
