--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </style></head>
 
     <body>
-    <h1>nowhere in particular</h1>
+    <h1>nowhere in particular.</h1>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
     I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
     Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
