--- a/words/diary.html
+++ b/words/diary.html
@@ -29,7 +29,7 @@
             <br>
             <br>oh! my name... um...
             <br>you can call me... uh....
-            <br>wait what' my name again hold on
+            <br>wait what's my name again hold on
             <br>(flips through pages of a notebook)
             <br>
             <br>ugh my parents keep making noise they're so loud...
