--- a/home.html
+++ b/home.html
@@ -4,38 +4,39 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>nowhere in particular</title>
-        <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
-            a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
-            a.misc:hover{color: #15c405;
-            text-decoration-color: #15c405;}
-            a.log:hover{color: #ffa900;
-            text-decoration-color: #ffa900;}
-            a.websites:hover{color: #F2CF68;
-            text-decoration-color: #F2CF68;}
-            a{text-decoration-thickness: 3px; font-weight: normal;}
-            p{max-width: 764px;}
-            body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
-            h1{font-size: 70px}
-            #entry a{text-decoration-thickness: 1px;}
+        <title>welcome!</title>
+        <style>
+            body{display: grid;
+            grid-template-columns: 3fr 4fr;
+            margin: 0px;
+            background-color: #080808;
+            color: #f0f0f0;
+            height: 100vh;
+            font-family: 'Inter', sans-serif;}
+            .l, .r{height:100vh; display: grid; align-content: center;}
+
+            .r{padding: 0 20px}
+            p{margin: auto; font-size: larger; line-height: 1.4}
+
+            a{color: #f0f0f0}
+            a:hover{background-color: #f0f0f0; color: #080808; text-decoration-color: #f0f0f0}
         </style></head>
 
     <body>
-    <h1>nowhere in particular.</h1>
-    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
-    I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
-    Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
-    around and explore, however small this site may be.<br>
-    <details><summary style="font-weight: bold">current status</summary>
-        <div id="entry" style="margin-left: 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
-    <p style="font-size:xx-large">
-        <a href="/website/about" title="me and what i like to do">about</a> . 
-        <a href="/website/musicians" title="good music people">musicians</a> . 
-        <a href="/website/websites" title="cool websites" class="websites">websites</a><br>
-        <a href="/website/words" title="poems and texts and things" class="words">words</a> . 
-        <a href="/website/doodles" title="stuff i drew" class="i">doodles</a> . 
-        <a href="/website/blender" title="3d renders in blender">blender</a> . 
-        <a href="/website/misc" title="general miscellanea" class="misc">misc</a><br>
-        <a href="/website/buttons" title="other folks' sites" class="buttons">buttons</a> . 
-        <a href="/website/sitelog" title="what's changed" class="log">sitelog</a>
-    </p></body>
+
+        <div class="l">
+            <p style="font-size:5vw; text-align: right; line-height: 1.2"><b>nowhere in<br>particular.</b>
+        </div>
+
+        <div class="r">
+            <p style="width: 75%">Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
+                I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
+                Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
+                around and explore, however small this site may be.<br><br><br></p>
+            <p style="font-size: 2.5vw; line-height: 1.5;">
+                <a>about</a> . <a>musicians</a> . <a>websites</a><br>
+                <a>words</a> . <a>doodles</a> . <a>blender</a> . <a>misc</a><br>
+                <a>buttons</a> . <a>sitelog</a>
+            </p></body>
+        </div>
+    </body>
