--- a/newindex.html
+++ b/newindex.html
@@ -31,6 +31,6 @@
 
         <div class="r">
             <p style="font-size:5vw"><b>nowhere in<br>particular.</b><br>
-            <a href="/home">enter</a></p>
+            <a href="home">enter</a></p>
         </div>
     </body>
