--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>welcome!</title>
+        <title>home</title>
         <style>
             body{display: grid;
             grid-template-columns: 2fr 3fr;
