--- a/about.html
+++ b/about.html
@@ -5,45 +5,38 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>about</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            p{max-width: 775px}
+        <style>
+        body{display: grid;
+            grid-template-columns: 2fr 5fr;
+            margin: 0px;
+            background-color: #080808;
+            color: #f0f0f0;
+            height: 100vh;
+            font-family: 'Inter', sans-serif;}
+            .l, .r{height:100vh; display: grid; align-content: center; padding: 0 50px}
+
+            h1{font-size: 3vw; margin: 0 0 0 auto}
+
+            p{margin: auto; font-size: 1.5vw; line-height: 1.4}
+
+            a{color: #f0f0f0; text-decoration-color: #808080}
+            a:hover{text-decoration-color: #f0f0f0}
         </style></head>
 
     <body>
-        <nav><div style="margin: 20px">
-            <a href="/website">home</a><br>
-            <br>
-            <a href="/website/about">about</a> ←<br>
-            <a href="/website/musicians">musicians</a><br>
-            <a href="/website/websites">websites</a><br>
-            <br>
-            <a href="/website/words">words</a><br>
-            <a href="/website/doodles">doodles</a><br>
-            <a href="/website/blender">blender</a><br>
-            <a href="/website/misc">misc</a><br>
-            <br>
-            <a href="/website/buttons">buttons</a><br>
-            <a href="/website/sitelog">sitelog</a><br>
-        </div></nav>
-    <div class="main">
-    <h1>about me</h1>
-    <div style="padding-left: 50px;margin-top: 20px">
-    <b>cvni81</b><img src="/website/misc/folder/dingus.png" alt="dingus" style="margin-right: 150px; margin-top: 20px; float: right;">
-    <ul style="margin-top: 0px">
-        <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
-        <li><b>pronouns:</b> they/he</li>
-        <li><b>age:</b> under 18</li>
-        <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, working on this website, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
-    </ul></div>
+        <div class="l">
+        <h1>about me</h1><img src="misc/folder/dingus.png" alt="dingus" style="margin:30px 0 0 auto"><br><a href="home" style="margin: 10px 0 0 auto; font-size: 1.5vw">go back</a>
+            </div>
+        <div class="r">
 
-    <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
+    <p>Hi! I go by cvni81 and this is my website thing. And i'm a lot of things.<br>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
     (<a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
-    Over time, i've had a bunch of neat interests, like collecting old coins, looking at lots of pretty flags, fonts or designs in general,
+    <br>Over time, i've had a bunch of neat interests, like old and new television ids, collecting old coins, looking at lots of pretty flags, fonts or designs in general,
     researching a bunch about something for no reason, and probably a bunch more things i've probably forgotten.
     I've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
-    Regarding gender, i'm kinda confused. I'm non-biney i suppose. Use they/them just to be sure but he/him works as a leftover ig<br>
-    And i'm pretty sure i have OCD. And maybe other things too, but don't worry about it.<br>
-    For contact: discord (@cvni81#4837) or email (cvni1981@gmail.com)</p>
+    <br>Regarding gender, i'm non-binary! Gender's very weird for me<br>
+    Also my mental health isn't doing very good at the moment :3<br>
+    For contact: discord (@cvni81#4837) or email (ew) (cvni1981@gmail.com)</p>
     </div></body>
