--- a/sitelog.html
+++ b/sitelog.html
@@ -12,7 +12,7 @@
         </style></head>
 
         <body><nav><div style="margin: 20px">
-            <a href="/website">home</a><br>
+            <a href="/website/home">home</a><br>
             <br>
             <a href="/website/about">about</a><br>
             <a href="/website/musicians">musicians</a><br>
@@ -30,6 +30,9 @@
         <h1>sitelog</h1>
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>in existence since july 2022<br>and that's it enjoy the sitelog ig</p>
     <div id="entry">
+        <h2>2/2/2023 12:13</h2>
+        <p>The site now has a welcome page! It was originally gonna be a much bigger change to the whole site but it didn't turn out good</p> 
+    </div><div id="entry">
         <h2>4/1/2023 11:43</h2>
         <p>I finally made a <a href="/website/words/diary">new words thing</a>!</p> 
     </div><div id="entry">
