--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <body>
         <nav><div style="margin: 20px">
-            <a href="/website">home</a><br>
+            <a href="/website/home">home</a><br>
             <br>
             <a href="/website/about">about</a> ←<br>
             <a href="/website/musicians">musicians</a><br>
