--- a/blender/buttons.html
+++ b/blender/buttons.html
@@ -9,7 +9,7 @@
 
     <body>
         <nav><div style="margin: 20px">
-            <a href="/website">home</a><br>
+            <a href="/website/home">home</a><br>
             <br>
             <a href="/website/about">about</a><br>
             <a href="/website/musicians">musicians</a><br>
