--- a/doodles.html
+++ b/doodles.html
@@ -17,7 +17,7 @@
     </style>
     </head>
     <body><nav><div style="margin: 20px">
-        <a href="/website">home</a><br>
+        <a href="/website/home">home</a><br>
         <br>
         <a href="/website/about">about</a><br>
         <a href="/website/musicians">musicians</a><br>
