--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">  
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>(?)</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
-    <style>
+        <title>welcome!</title>
+        <style>
+            body{display: grid;
+            grid-template-columns: 1fr 1fr;
+            margin: 0px;
+            height: 100vh;
+            font-family: 'Inter', sans-serif;}
+            .l, .r{height:100vh; display: grid; align-content: center;}
 
-        .this-container{
-            position: absolute;
-            left: 50%;
-            bottom: 50%;
-            transform: translate(-50%, 50%);
-            text-align: center;}
+            .l{background-color: #f0f0f0;}
+            .r{background-color: #404040;
+            color: #f0f0f0; padding: 0 20px}
 
-    </style></head>
+            p{margin: auto}
 
-    <body><div class="this-container">
-        <img src="/website/walking.gif" alt="walking"><br>
-        <span style="text-align: center;">we're under construction<br>come back some other time :3</span>
-    </div>
+            a{font-size: 2vw; color: #f0f0f0}
+            a:hover{background-color: #f0f0f0; color: #404040; text-decoration-color: #f0f0f0}
+        </style></head>
+
+    <body>
+
+        <div class="l">
+            <img src="sit.png" style="margin: auto; border: solid #404040 0px; width: 50%; border-radius: 100%;">
+        </div>
+
+        <div class="r">
+            <p style="font-size:5vw"><b>nowhere in<br>particular.</b><br>
+            <a href="home">enter</a></p>
+        </div>
     </body>
