--- a/misc.html
+++ b/misc.html
@@ -9,12 +9,12 @@
         <h1>misc</h1>
     <p>After going down the stairs and into the basement, you wander into a green door.
         <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
-        <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a wall covered in sticky notes.
+        <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a heavily scratched wall covered in sticky notes.
     </p>
         <ul>
             <li><a href="/website/misc/journal">open the notebook</a></li>
             <li><a href="/website/misc/phrases">look at the sticky notes</a></li>
             <li><a href="/website/misc/folder">open the folder</a></li>
-            <li><a href="/website">walk back out the door</a></li>
+            <li><a href="/website/home">walk back out the door</a></li>
         </ul>
     </body>
