--- a/websites.html
+++ b/websites.html
@@ -8,7 +8,7 @@
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"></head>
 
         <body><nav><div style="margin: 20px">
-            <a href="/website">home</a><br>
+            <a href="/website/home">home</a><br>
             <br>
             <a href="/website/about">about</a><br>
             <a href="/website/musicians">musicians</a><br>
