--- a/misc.html
+++ b/misc.html
@@ -15,6 +15,6 @@
             <li><a href="/website/misc/journal">open the notebook</a></li>
             <li><a href="/website/misc/phrases">look at the sticky notes</a></li>
             <li><a href="/website/misc/folder">open the folder</a></li>
-            <li><a href="/website/home">walk back out the door</a></li>
+            <li><a href="/website">walk back out the door</a></li>
         </ul>
     </body>
