--- a/musicians.html
+++ b/musicians.html
@@ -9,7 +9,7 @@
             #list li{margin: 20px 0}
         </style></head>
         <body><nav><div style="margin: 20px; margin-right: 0px">
-            <a href="/website/home">home</a><br>
+            <a href="/website">home</a><br>
             <br>
             <a href="/website/about">about</a><br>
             <a href="/website/musicians">musicians</a> ←<br>
