--- a/misc/folder/index2.html
+++ b/misc/folder/index2.html
@@ -26,7 +26,7 @@
     <body>
 
         <div class="l">
-            <img src="misc/folder/sit.png" style="margin: auto; border: solid #404040 0px; width: 50%; border-radius: 100%;">
+            <img src="sit.png" style="margin: auto; border: solid #404040 0px; width: 50%; border-radius: 100%;">
         </div>
 
         <div class="r">
