--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             text-decoration-color: #F2CF68;}
             a{text-decoration-thickness: 3px; font-weight: normal;}
             p{max-width: 764px;}
-            body{padding: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
+            body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
             h1{font-size: 70px}
             #entry a{text-decoration-thickness: 1px;}
         </style></head>
 
-    <body><div style="margin: 0 auto">
+    <body>
     <h1>nowhere in particular.</h1>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
     I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
@@ -38,4 +38,4 @@
         <a href="/website/misc" title="general miscellanea" class="misc">misc</a><br>
         <a href="/website/buttons" title="other folks' sites" class="buttons">buttons</a> . 
         <a href="/website/sitelog" title="what's changed" class="log">sitelog</a>
-    </p></div></body>
+    </p></body>
