--- a/misc/journal.html
+++ b/misc/journal.html
@@ -8,8 +8,7 @@
     <style>
         .entry{background-color: #072502;
         border-left: solid #15c405 5px;
-        padding: 10px;
-        padding-left: 20px;
+        padding: 10px 20px;
         margin: 40px auto;
         width: 750px;
         max-width: 75%}
