--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <b>cvni81</b><img src="/website/misc/folder/dingus.png" alt="dingus" style="margin-right: 150px; margin-top: 20px; float: right;">
     <ul style="margin-top: 0px">
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
-        <li><b>pronouns:</b> they/he</li>
+        <li><b>pronouns:</b> they/them</li>
         <li><b>age:</b> under 18</li>
         <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, working on this website, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
     </ul></div>
