--- a/newsite/about.html
+++ b/newsite/about.html
@@ -21,7 +21,7 @@
         <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, working on this website, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
     </ul></div>
 
-    <p>Hi! I go by cvni81 and this is my website thing. And i'm a lot of things.<br>
+    <p>Hi! I go by cvni81 and this is my website thing. And i do a bunch of things.<br>
         I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
         (<a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
         <br>Over time, i've had a bunch of neat interests, like old and new television ids, collecting old coins, looking at lots of pretty flags, fonts or designs in general,
