--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
         </div></nav>
     <div class="main">
     <h1>about me</h1>
+    <p>home</p>
+
     <div style="padding-left: 50px;margin-top: 20px">
     <b>cvni81</b><img src="/website/misc/folder/dingus.png" alt="dingus" style="margin-right: 150px; margin-top: 20px; float: right;">
     <ul style="margin-top: 0px">
@@ -36,7 +38,7 @@
         <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
     </ul></div>
 
-    <p>Hi! I go by cvni81 and this is my website thing. And i'm a lot of things.<br>
+    <p>Hi! I go by cvni81 and this is my website thing. And i do a bunch of things.<br>
         I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
         (<a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
         <br>Over time, i've had a bunch of neat interests, like old and new television ids, collecting old coins, looking at lots of pretty flags, fonts or designs in general,
