--- a/newsite/about.html
+++ b/newsite/about.html
@@ -8,27 +8,29 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
 
-    <body>
-
-    <div class="main">
+    <body><div class="main">
     <h1>about me</h1>
+    <a class="back" href="home">← home</a>
+
     <div style="padding-left: 50px;margin-top: 20px">
     <b>cvni81</b><img src="dingus.png" alt="dingus" style="margin: 20px 40px; float: right; border-radius: 100%">
     <ul style="margin-top: 0px">
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
         <li><b>pronouns:</b> they/them</li>
         <li><b>age:</b> under 18</li>
-        <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, working on this website, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
+        <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
     </ul></div>
 
     <p>Hi! I go by cvni81 and this is my website thing. And i do a bunch of things.<br>
         I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
         (<a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
-        <br>Over time, i've had a bunch of neat interests, like old and new television ids, collecting old coins, looking at lots of pretty flags, fonts or designs in general,
+        <br>Over time, i've had a bunch of neat interests, like old and new television IDs, collecting old coins, looking at lots of pretty flags, fonts or designs in general,
         researching a bunch about something for no reason, and probably a bunch more things i've probably forgotten.
         I've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
         (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
-        <br>Regarding gender, i'm non-binary! Gender's very weird for me<br>
+        <br>Regarding gender, i'm non-binary!
+        <span style="color: #303030">█</span><span style="color: #8060f0">█</span><span style="color: #ffffff">█</span><span style="color: #f0e060">█</span>
+        Gender's very weird for me<br>
         Also my mental health isn't doing very good at the moment :3<br>
         For contact: discord (@cvni81#4837) or email (ew) (cvni1981@gmail.com)</p>
     </div></body>
