--- a/newsite/about.html
+++ b/newsite/about.html
@@ -8,18 +8,21 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
 
-    <body><div class="main">
+    <body><div class="page"><div class="main">
     <h1>about me</h1>
     <a class="back" href="home">← home</a>
 
-    <div style="padding-left: 50px;margin-top: 20px">
-    <b>cvni81</b><img src="dingus.png" alt="dingus" style="margin: 20px 40px; float: right; border-radius: 100%">
+    <div style="margin-top: 20px; display: grid; grid-template-columns: 1fr 1fr;">
+    <div style="padding-left: 50px">
+    <b>cvni81</b>
     <ul style="margin-top: 0px">
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
         <li><b>pronouns:</b> they/them</li>
         <li><b>age:</b> under 18</li>
         <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
     </ul></div>
+    <div><img src="dingus.png" alt="dingus" style="margin: 20px 40px; float: right; border-radius: 100%"></div>
+    </div>
 
     <p>Hi! I go by cvni81 and this is my website thing. And i do a bunch of things.<br>
         I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
@@ -33,4 +36,4 @@
         Gender's very weird for me<br>
         Also my mental health isn't doing very good at the moment :3<br>
         For contact: discord (@cvni81#4837) or email (ew) (cvni1981@gmail.com)</p>
-    </div></body>
+    </div></div></body>
