--- a/newsite/about.html
+++ b/newsite/about.html
@@ -13,7 +13,7 @@
     <a class="back" href="home">← home</a>
 
     <div style="margin-top: 20px; display: grid; grid-template-columns: 2fr 1fr;">
-    <div style="padding-left: 50px; font-size: 2rem">
+    <div style="padding-left: 50px">
     <b>cvni81</b>
     <ul style="margin-top: 0px">
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
