--- a/newsite/about.html
+++ b/newsite/about.html
@@ -3,16 +3,20 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" content="width=device-width, initial-scale=1">
         <title>about</title>
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
+        img{float:right}
+        @media only screen and (min-width: 650px) {
+            .about{margin-top: 20px; display: grid; grid-template-columns: 2fr 1fr;}
+            img{float:none}}
         </style></head>
 
     <body><div class="page"><div class="main">
     <h1>about me</h1>
     <a class="back" href="home">← home</a>
 
-    <div style="margin-top: 20px; display: grid; grid-template-columns: 2fr 1fr;">
+    <div class="about">
     <div style="padding-left: 50px">
     <b>cvni81</b>
     <ul style="margin-top: 0px">
@@ -21,7 +25,7 @@
         <li><b>age:</b> under 18</li>
         <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
     </ul></div>
-    <div><img src="dingus.png" alt="dingus" style="margin: 20px 40px; float: right; border-radius: 100%"></div>
+    <div><img src="dingus.png" alt="dingus" style="margin: 20px 40px; border-radius: 100%"></div>
     </div>
 
     <p>Hi! I go by cvni81 and this is my website thing. And i do a bunch of things.<br>
