--- a/newsite/about.html
+++ b/newsite/about.html
@@ -40,4 +40,4 @@
         Gender's very weird for me<br>
         Also my mental health isn't doing very good at the moment :3<br>
         For contact: discord (@cvni81#4837) or email (ew) (cvni1981@gmail.com)</p>
-    </div></div></body>
+    </div></div></body></html>
