--- a/newsite/about.html
+++ b/newsite/about.html
@@ -6,10 +6,10 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>about</title>
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
-        img{float:right}
+        img{margin: 20px auto}
         @media only screen and (min-width: 650px) {
-            .about{margin-top: 20px; display: grid; grid-template-columns: 2fr 1fr;}
-            img{float:none}}
+            .about{margin-top: 20px; display: grid; grid-template-columns: 1fr 3fr;}
+            img{margin: 20px}}
         </style></head>
 
     <body><div class="page"><div class="main">
@@ -17,7 +17,8 @@
     <a class="back" href="home">← home</a>
 
     <div class="about">
-    <div style="padding-left: 50px">
+    <div style="display: flex"><img src="dingus.png" alt="dingus" style="align-self: center; border-radius: 100%"></div>
+    <div style="padding-left: 30px">
     <b>cvni81</b>
     <ul style="margin-top: 0px">
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
@@ -25,7 +26,6 @@
         <li><b>age:</b> under 18</li>
         <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
     </ul></div>
-    <div><img src="dingus.png" alt="dingus" style="margin: 20px 40px; border-radius: 100%"></div>
     </div>
 
     <p>Hi! I go by cvni81 and this is my website thing. And i do a bunch of things.<br>
