--- a/newsite/about.html
+++ b/newsite/about.html
@@ -18,7 +18,7 @@
 
     <div class="about">
     <div style="display: flex"><img src="dingus.png" alt="dingus" style="align-self: center; border-radius: 100%"></div>
-    <div style="padding-left: 30px">
+    <div>
     <b>cvni81</b>
     <ul style="margin-top: 0px">
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
